syntax = "proto3";

package java_binding;

import "catalog.proto";
import "hummock.proto";

option java_package = "com.risingwave.proto";
option optimize_for = SPEED;

message ReadPlan {
  uint32 table_id = 1;
  hummock.HummockVersion version = 2;
  catalog.Table table_catalog = 3;
}
